[package]
name = "shards-bg3"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]  # Produces a dynamic library

[dependencies]
shards = { version = "0.1.1", path = "../shards/shards/rust", features = ["dllshard"] }
bg3_lib = { git = "https://github.com/sinkingsugar/bg3d.git" }
lazy_static = "1.5.0"
ctor = "0.2"
log = "0.4.20"